Fixed issues with athlete names overflowing div

--- a/trunk/frontend/html/include/css/forms/worldclass/scoreBoard.scss
+++ b/trunk/frontend/html/include/css/forms/worldclass/scoreBoard.scss
@@ -10,6 +10,7 @@
 	height: 720px;
 	border-radius: 24px;
 	border: 4px solid white;
+	margin-top: 20px;
 
 	.judgeScores {
 		position: absolute;
@@ -97,11 +98,11 @@
 		.athlete {
 			position: absolute;
 			top: 0;
-			left: 120px;
+			left: 0;
 			color: yellow;
 			margin: 0;
 			height: 120px;
-			width: 454px;
+			width: 694px;
 			font-size: 72pt;
 			line-height: 72pt;
 			text-align: center;
@@ -109,21 +110,11 @@
 
 		.flag {
 			position: absolute;
+			top: 0;
+			left: 0;
 			padding: 16px 4px 4px 4px;
 			height: 128px;
 			width: 128px;
-		}
-
-		.left {
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
-
-		.right {
-			position: absolute;
-			top: 0;
-			left: 572px;
 		}
 
 		.round {
