--- a/trunk/frontend/html/include/css/forms/worldclass/worldclassApp.css
+++ b/trunk/frontend/html/include/css/forms/worldclass/worldclassApp.css
@@ -25,7 +25,8 @@ body {
     width: 1000px;
     height: 720px;
     border-radius: 24px;
-    border: 4px solid white; }
+    border: 4px solid white;
+    margin-top: 20px; }
     .worldclass .scoreboard .judgeScores {
       position: absolute;
       top: 0;
@@ -132,27 +133,21 @@ body {
       .worldclass .scoreboard .totalScores .athlete {
         position: absolute;
         top: 0;
-        left: 120px;
+        left: 0;
         color: yellow;
         margin: 0;
         height: 120px;
-        width: 454px;
+        width: 694px;
         font-size: 72pt;
         line-height: 72pt;
         text-align: center; }
       .worldclass .scoreboard .totalScores .flag {
         position: absolute;
+        top: 0;
+        left: 0;
         padding: 16px 4px 4px 4px;
         height: 128px;
         width: 128px; }
-      .worldclass .scoreboard .totalScores .left {
-        position: absolute;
-        top: 0;
-        left: 0; }
-      .worldclass .scoreboard .totalScores .right {
-        position: absolute;
-        top: 0;
-        left: 572px; }
       .worldclass .scoreboard .totalScores .round {
         position: absolute;
         top: 580px;
